--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>走势图</title>
+    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="bookmark" href="favicon.ico">
     <script src="runChart/js/jquery-1.11.2.min.js" rel="stylesheet" type="text/javascript"></script>
 
     <script src="runChart/js/echarts.js" rel="stylesheet" type="text/javascript"></script>
