--- a/runChart/domeJson.html
+++ b/runChart/domeJson.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-  <!--  <script src="js/echarts.js"></script>
-    <script src="js/china.js"></script>-->
+  <!--  <script static="js/echarts.js"></script>
+    <script static="js/china.js"></script>-->
 
     <script src="js/jquery-1.11.2.min.js" type="text/javascript"></script>
     <script src="js/echarts.js"></script>
