--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <head>
 
-    <title>canvas水波涟漪特效 | jQuery特效|H5网站特效| H5游戏</title>
+    <title>首页欢迎</title>
     <meta charset="UTF-8">
     <meta name="keywords" content="canvas动画, 手机微信网站特效, css3动画, html5特效, 网页特效" />
     <meta name="description" content="网页特效库-专注于HTML5、CSS3、js、jQuery、手机移动端等网页特效的手机与分享。所有的资源都免费提供广大童鞋下载学习和使用。" />
