--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 <link rel="shortcut icon" href="style/images/LOGO.png" />
-<title>袁军伟&quot;个站 </title>
+<title>浩轩&quot;个站 </title>
 
 
 
