--- a/subPage/ints/leaveWord.html
+++ b/subPage/ints/leaveWord.html
@@ -5,8 +5,8 @@
     <title>留言版</title>
     <link rel="stylesheet" type="text/css" href="css/common.css">
     <link rel="stylesheet" type="text/css" href="libs/bootstrap/css/bootstrap.min.css">
-    <!--<link rel="stylesheet" type="text/css" href="css/leaveWord.css">-->
-    <link rel="stylesheet/less" type="text/css" href="css/leaveWord.less">
+    <link rel="stylesheet" type="text/css" href="css/leaveWord.css">
+    <!--<link rel="stylesheet/less" type="text/css" href="css/leaveWord.less">-->
 </head>
 <body>
 <!--<h6>留言</h6>-->
@@ -16,7 +16,7 @@
         <dt>
             留言版
         </dt>
-        <dd>
+   <!--     <dd>
             <ul>
                 <li class="initText">
                     <div class="nameAndImg"><img src="images/test.jpg"><span class="accName">鸟树下睡觉的猪</span><span>回复</span><span class="accName">鸟树下睡觉的猪</span></div>
@@ -51,7 +51,7 @@
             </li>
 
             </ul>
-        </dd>
+        </dd>-->
 
     </dl>
 
@@ -65,19 +65,6 @@
             <!--<li><button id="accLeWould" class="accLeWould">提交留言</button></li>-->
         </ul>
     </form>
-
-<!--    <div class="leaveFormHf">
-        <form class="leaveForm">
-            <ul>
-                <li class="leaveWordsTitle"><h4>回复</h4></li>
-                <li><label for="leWoNameHf">名称</label><input id="leWoNameHf"></li>
-                <li><label for="leWoEmilHf">邮箱</label><input id="leWoEmilHf"></li>
-                <li><label for="leWordsHf">留言</label><textarea id="leWordsHf"></textarea></li>
-                <li><div id="accLeWouldHf" class="accLeWould">提交回复</div></li>
-                &lt;!&ndash;<li><button id="accLeWould" class="accLeWould">提交留言</button></li>&ndash;&gt;
-            </ul>
-        </form>
-    </div>-->
 
 
 
