--- a/subPage/ints/leaveWord.html
+++ b/subPage/ints/leaveWord.html
@@ -5,8 +5,8 @@
     <title>留言版</title>
     <link rel="stylesheet" type="text/css" href="css/common.css">
     <link rel="stylesheet" type="text/css" href="libs/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="css/leaveWord.css">
-    <!--<link rel="stylesheet/less" type="text/css" href="css/leaveWord.less">-->
+    <!--<link rel="stylesheet" type="text/css" href="css/leaveWord.css">-->
+    <link rel="stylesheet/less" type="text/css" href="css/leaveWord.less">
 </head>
 <body>
 <!--<h6>留言</h6>-->
@@ -14,7 +14,7 @@
 <div class="leaveWordsBox">
     <dl class="leaveWords" id="leaveWords">
         <dt>
-            留言版
+            <h3>留言版</h3><h6>交流</h6>
         </dt>
    <!--     <dd>
             <ul>
