--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="menu">
             <a class="anniu" href="javascript:void(0);" >博客</a>
             <a class="anniu" href="javascript:void(0);" >自學</a>
-            <a class="anniu" id="leaveWord" href="subPage/ints/leaveWord.html" >留言</a>
+            <a class="anniu" id="leaveWord" href="subPage/intsCell/leaveWord.html" >留言</a>
             <a class="anniu" id="aboutPrep" href="javascript:void(0);" >关于</a>
             <a class="anniu" id="logIn" href="javascript:void(0);" >登陆</a>
         </div>
