--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-<link rel="shortcut icon" href="style/images/LOGO.png" />
+<link rel="shortcut icon" href="style/images/LOGO02.png" />
 <title>浩轩&quot;个站 </title>
 
 
@@ -19,7 +19,7 @@
 
     <div id="willerce">
         <div>
-            <img src="style/images/LOGO.png" id="logo" title="waylee"/>
+            <img src="style/images/LOGO02.png" id="logo" title="waylee"/>
             <h1>（浩轩）</h1>
             <!--<a>登陆</a>-->
         </div>
